feat: add Products view with categories and update related styles and scripts
- Add Products.cshtml under Categories with static example content
- Create new SCSS partials for categories, product listing and images
- Add new JS file for categories/products and update flyout/site scripts
- Update site.scss and compiled CSS for layout adjustments

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -14,6 +14,8 @@
 @use 'components/flyouts';
 @use 'components/subcategories';
 @use 'components/products';
-@use "components/breadcrumbs";
+@use 'components/product-listing';
+@use 'components/breadcrumbs';
+@use 'components/categories-images';
 
 @use 'pages/categories';
