--- a/scss/site.scss
+++ b/scss/site.scss
@@ -10,6 +10,7 @@
 @use 'layout/navigation';
 @use 'layout/footer';
 
+/* Components */
 @use 'components/overlay';
 @use 'components/flyouts';
 @use 'components/subcategories';
@@ -17,5 +18,10 @@
 @use 'components/product-listing';
 @use 'components/breadcrumbs';
 @use 'components/categories-images';
+@use "components/product-detail";
+@use "components/product-images";
+@use "components/product-variants";
+@use "components/product-tabs";
 
+/* Pages */
 @use 'pages/categories';
